Initial Commit and Update to Current Progress
-Added folder structure generated with the PlatformIO for CLion and related README files
- Added generateBenignData and related header file
- Added platformio.ini file
- Updated .gitignore file to correctly ignore certain files
- Added sending and receiving CAN messages for and Arduino board with a CAN bus shield
- Added functionality to printing sent and received messages to terminal
- Added functionality of sending messages with certain IDs and payloads
- Added functionality of sending empty and randomly generated payloads and IDs
- Started to add ECU CAN IDs to header file

--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,6 @@
-# Prerequisites
-*.d
+.idea
+.pio
+cmake-build-*/
+lib/Seeed_Arduino_CAN-2.3.1
+CMakeListsPrivate.txt
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
