--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,9 @@ project("ClionArduino" C CXX)
 
 include(CMakeListsPrivate.txt)
 
+include_directories("${CMAKE_CURRENT_LIST_DIR}/lib/Seeed_Arduino_CAN-2.3.1/src")
+include_directories("${CMAKE_CURRENT_LIST_DIR}/lib/df_mcp_can")
+
 if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/CMakeListsUser.txt)
 include(CMakeListsUser.txt)
 endif()
@@ -23,11 +26,4 @@ add_custom_target(
     COMMAND platformio -c clion run "$<$<NOT:$<CONFIG:All>>:-e${CMAKE_BUILD_TYPE}>"
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
-
-add_custom_target(
-    Debug ALL
-    COMMAND platformio -c clion debug "$<$<NOT:$<CONFIG:All>>:-e${CMAKE_BUILD_TYPE}>"
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-)
-
 add_executable(Z_DUMMY_TARGET ${SRC_LIST})
