Added Vehicle capabilities for CAN bus message generation
- Added Vehicle.cpp and Vehicle.h that offers accelerating, breaking, and turning functionality to a simulated car
- Changed title of project (ClionArduino to CANbusImitation)
- Removed unnecessary reference to library df_mcp_can
- Added Debug target
- Added Loops In a Second (lis)
- Fixed logical error with operation type logic
- Removed centered boolean from function SAS
- Cleaned up commenting to be more consistent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,11 @@ set(CMAKE_SYSTEM_NAME Generic)
 set(CMAKE_C_COMPILER_WORKS 1)
 set(CMAKE_CXX_COMPILER_WORKS 1)
 
-project("ClionArduino" C CXX)
+project("CANbusImitation" C CXX)
 
 include(CMakeListsPrivate.txt)
 
 include_directories("${CMAKE_CURRENT_LIST_DIR}/lib/Seeed_Arduino_CAN-2.3.1/src")
-include_directories("${CMAKE_CURRENT_LIST_DIR}/lib/df_mcp_can")
 
 if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/CMakeListsUser.txt)
 include(CMakeListsUser.txt)
@@ -26,4 +25,11 @@ add_custom_target(
     COMMAND platformio -c clion run "$<$<NOT:$<CONFIG:All>>:-e${CMAKE_BUILD_TYPE}>"
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
+
+add_custom_target(
+    Debug ALL
+    COMMAND platformio -c clion debug "$<$<NOT:$<CONFIG:All>>:-e${CMAKE_BUILD_TYPE}>"
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+)
+
 add_executable(Z_DUMMY_TARGET ${SRC_LIST})
