--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,8 @@ default_envs = uno
 platform = atmelavr
 framework = arduino
 board = uno
-upload_port = COM6
+; The serial port that the Arduino is connected to
+upload_port = COM3
 
 ; Serial Monitor options
 monitor_speed = 115200
